2008-02-19  Jens Granseuer  <jensgr@gmx.net>

	* file-transfer-dialog.c: (file_transfer_dialog_update_num_files): fix
	small leak

2008-01-25  Jens Granseuer  <jensgr@gmx.net>

	* capplet-stock-icons.c: (capplet_init_stock_icons): remove code
	for obsolete "stock" icons

2007-12-21  Luca Ferretti  <elle.uca@libero.it>

	* gnome-theme-info.c: (gnome_theme_read_meta_theme),
	(gnome_theme_meta_info_free), (gnome_theme_meta_info_print),
	(gnome_theme_meta_info_compare):
	* gnome-theme-info.h:
	Add support for WindowTitleFont and DocumentsFont keys in
	meta-themes. See bug #504250

2007-12-14  Jens Granseuer  <jensgr@gmx.net>

	* gtkrc-utils.c: (gtkrc_get_details), (gtkrc_get_color_scheme): don't
	even try to open NULL filenames, and don't leak filenames when
	detecting recursions

2007-12-09  Jens Granseuer  <jensgr@gmx.net>

	* theme-thumbnail.c: (hbox_foreach): don't try to map invisible
	widgets, e.g. the button icon when running with gtk-button-images=0
	(bug #461298)

2007-12-09  Jens Granseuer  <jensgr@gmx.net>

	* theme-thumbnail.c: (create_meta_theme_pixbuf): free metacity theme
	after use

2007-12-04  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Brian Cameron <brian.cameron@sun.com>

	* gtkrc-utils.c: (gtkrc_get_details), (gtkrc_get_color_scheme):
	printing NULL strings crashes on Solaris so don't do that (bug #501391)

20007-11-12  Rodrigo Moya <rodrigo@gnome-db.org>

	* gnome-theme-info.c:
	* gnome-theme-info.h: re-added GnomeThemeElement to the "public" API,
	since it's used in gnome-theme-test.

2007-11-11  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c:
	* gnome-theme-info.h: remove GnomeThemeElement from the "public" API

2007-11-11  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (handle_change_signal), (update_theme_index),
	(update_common_theme_dir_index):
	* gnome-theme-info.h: remove more redundant info from the theme changed
	callback

2007-10-29  Jens Granseuer  <jensgr@gmx.net>
